--- a/source/cyborg/formats.html
+++ b/source/cyborg/formats.html
@@ -1,5 +1,3 @@
-{#
 <div class="getit">
-    <p><a href="/docs/user-guide.pdf">Download the docs</a> for offline viewing!</p>
+    <p><a href="/docs/user-guide.pdf">Download the docs</a> for offline viewing.</p>
 </div>
-#}
